--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,18 @@ os:
   - linux
   - osx
 julia:
-  - 0.4
+  - 0.6
   - nightly
 notifications:
   email: false
+git:
+  depth: 99999999
 # uncomment the following lines to override the default test script
 #script:
 #  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
 #  - julia -e 'Pkg.clone(pwd()); Pkg.build("Merly"); Pkg.test("Merly"; coverage=true)'
+after_success:
+  # push coverage results to Coveralls
+  - julia -e 'cd(Pkg.dir("Merly")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
+  # push coverage results to Codecov
+  - julia -e 'cd(Pkg.dir("Merly")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
