logo, documentacion e intento de arreglar el bug de la carga de archivos en linux

--- a/docs/makedocs.yml
+++ b/docs/makedocs.yml
@@ -1,4 +1,4 @@
-site_name:        Diana.jl
+site_name:        Merly.jl
 repo_url:         https://github.com/codeneomatrix/Merly.jl
 site_description: Merly Docs
 site_author:      Josue Acevedo Maldonado
