--- a/Project.toml
+++ b/Project.toml
@@ -9,4 +9,4 @@ JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 Sockets = "6462fe0b-24de-5631-8697-dd941f90decc"
 
 [compat]
-julia = "=1.3"
+julia = "1.3"
