--- a/Project.toml
+++ b/Project.toml
@@ -1,11 +1,10 @@
 name = "Merly"
 uuid = "5b70daea-9db9-5a46-aedf-2142e553ecc5"
-repo = "https://github.com/codeneomatrix/Merly.jl"
+repo = "https://github.com/neomatrixcode/Merly.jl"
 version = "1.0.0"
 
 [deps]
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
-JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 Sockets = "6462fe0b-24de-5631-8697-dd941f90decc"
 
 [compat]
