--- a/.travis.yml
+++ b/.travis.yml
@@ -11,13 +11,13 @@ julia:
 codecov: true
 notifications:
   email: false
-jobs:
-  include:
-    - stage: "Documentation"
-      julia: 1.0
-      os: linux
-      script:
-        - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd()));
-                                               Pkg.instantiate()'
-        - julia --project=docs/ docs/make.jl
-      after_success: skip
+#jobs:
+#  include:
+#    - stage: "Documentation"
+#      julia: 1.0
+#      os: linux
+#      script:
+#        - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd()));
+#                                               Pkg.instantiate()'
+#        - julia --project=docs/ docs/make.jl
+#      after_success: skip
