--- a/.github/workflows/TagBot.yml
+++ b/.github/workflows/TagBot.yml
@@ -1,11 +1,17 @@
+# https://discourse.julialang.org/t/ann-required-updates-to-tagbot-yml/49249
 name: TagBot
 on:
-  schedule:
-    - cron: 0 * * * *
+  issue_comment:  # THIS BIT IS NEW
+    types:
+      - created
+  workflow_dispatch:
 jobs:
   TagBot:
+    # THIS 'if' LINE IS NEW
+    if: github.event_name == 'workflow_dispatch' || github.actor == 'JuliaTagBot'
+    # NOTHING BELOW HAS CHANGED
     runs-on: ubuntu-latest
     steps:
       - uses: JuliaRegistries/TagBot@v1
         with:
-          token: ${{ secrets.tokenbot }}
+          token: ${{ secrets.GITHUB_TOKEN }}
